--- a/codeantSr.conf
+++ b/codeantSr.conf
@@ -57805,6 +57805,8 @@ FINAL,direct
 [URL Rewrite]
 ^https?://(www.)?(g|google)\.cn https://www.google.com 302
 
+[Script]
+YouTube去广告 = type=http-request,pattern=^https?:\/\/.+?\.googlevideo\.com\/.+&(oad|ctier)=(?!A),script-path=https://choler.github.io/Surge/Script/YouTube.js,script-update-interval=0,enable = true
 
 [MITM]
 hostname = *.google.cn,*.googlevideo.com
