mitm enable true

--- a/codeantSr.conf
+++ b/codeantSr.conf
@@ -57809,6 +57809,7 @@ FINAL,direct
 YouTube去广告 = type=http-request,pattern=^https?:\/\/.+?\.googlevideo\.com\/.+&(oad|ctier)=(?!A),script-path=https://choler.github.io/Surge/Script/YouTube.js,script-update-interval=0,enable = true
 
 [MITM]
+enable = true
 hostname = *.google.cn,*.googlevideo.com
 
 # Made with Love from https://github.com/Johnshall/Shadowrocket-ADBlock-Rules-Forever
